objects/MPLS_RVA_Quote_Request__c.object
<CustomObject>
    <fields>
        <fullName>Total_Site_Bandwidth__c</fullName>
        <formula>IF( 
ispickval(  CODEC__c  , &quot;G.711&quot;) &amp;&amp;  Model__c =&quot;Remote Control VOIP&quot;, 
Bandwidth_Calculation__r.RC_VOIP_G_711_plus_Apps_Mbps__c ,
if(
ispickval(  CODEC__c  , &quot;G.729&quot;) &amp;&amp;  Model__c =&quot;Remote Control VOIP&quot;, 
Bandwidth_Calculation__r.RC_VOIP_G_729_plus_Apps_Mbps__c ,
IF( 
ispickval(  CODEC__c  , &quot;G.711&quot;) &amp;&amp;  Model__c =&quot;Local Control&quot;, 
 Bandwidth_Calculation__r.RVA_Total_BW_incl_Apps_at_G_711_Mbps__c  ,
if(
ispickval(  CODEC__c  , &quot;G.729&quot;) &amp;&amp;  Model__c =&quot;Local Control&quot;, 
 Bandwidth_Calculation__r.RVA_Total_BW_incl_Apps_at_G_729_Mbps__c  ,
0)
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Site Bandwidth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>U_Space__c</fullName>
        <label>U Space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAN_Cross_Connect_DS2_Copper_Coax__c</fullName>
        <label>WAN Cross Connect - DS2 (Copper Coax)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAN_Cross_Connect_DS3_Muxed_Copper__c</fullName>
        <label>WAN Cross Connect - DS3 Muxed (Copper)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAN_Cross_Connect_Ethernet__c</fullName>
        <label>WAN Cross Connect - Ethernet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAN_Cross_Connect_T1_Analog__c</fullName>
        <label>WAN Cross Connect - T1/Analog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MPLS / RVA / Data Center Quote Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bandwidth_Calculation__c</columns>
        <columns>Quote__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MPLS/RVA/Data Center Quote Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPLS / RVA / Data Center Quote Requests</pluralLabel>
    <recordTypes>
        <fullName>Data_Center</fullName>
        <active>true</active>
        <description>Use for top level, Data Center Quote Requests.  Each Data Center request must have 1 or more Site Requests associated.</description>
        <label>Data Center</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>